[package]
name = "swap-kit-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
swap-kit-types = { path = "../swap-kit-types" }

tokio  = { version = "1", features = ["full"] }
axum   = { version = "0.7", features = ["json"] }
serde  = { version = "1", features = ["derive"] }
serde_json = "1"

rayon       = "1.8"
tiny-keccak = { version = "2", features = ["keccak"] }
reqwest     = { version = "0.12", features = ["json"] }
anyhow      = "1"
thiserror   = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
