[package]
name = "swap-kit-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance MEV simulation and quote aggregation engine for swap-kit"
license = "MIT"

[[bin]]
name = "swap-kit-engine"
path = "src/main.rs"

[lib]
name = "swap_kit_engine"
path = "src/lib.rs"

[dependencies]
# Shared types
swap-kit-types = { version = "0.1.0", path = "../swap-kit-types" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parallel computation (for address mining)
rayon = "1.10"

# Hashing (keccak256 for CREATE2)
tiny-keccak = { version = "2", features = ["keccak"] }

# HTTP client (for RPC calls)
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
